Fix Tests3